--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     build: .
     volumes:
       - .:/usr/src/app
-    command: npm run launch
+    command: npm run start
     ports:
       - "3000:3000"
     environment:
