--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "baseUrl": ".",
     "plugins": [
       {
         "name": "next"
@@ -34,7 +35,6 @@
   },
   "include": [
     "next-env.d.ts",
-    "environment.d.ts",
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
