--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,6 +37,8 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
+    "**/*.js",
+    "**/*.jsx",
     ".next/types/**/*.ts",
   ],
   "exclude": [
