--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,7 @@
-node_modules/
-.next/
-.build/
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+Dockerfile
+.dockerignore
+node_modules
+npm-debug.log
+README.md
+.next
+.git
