--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 # DO NOT ADD SECRETS TO THIS FILE. This is a good place for defaults.
 # If you want to add secrets use `.env.local` instead.
 
-ENV_VARIABLE="server_only_variable"
-NEXT_PUBLIC_ENV_VARIABLE="public_variable"
+ENV_VARIABLE=production_server_only_variable
+NEXT_PUBLIC_ENV_VARIABLE=production_public_variable
 DB_LOCAL_URL=mongodb://mongo:27017/denizpaz
+PORT=3000
