--- a/.env.local.example
+++ b/.env.local.example
@@ -1,3 +1,4 @@
 MONGODB_URI=
 ENV_LOCAL_VARIABLE="server_only_variable_from_env_local"
 NEXT_PUBLIC_ENV_LOCAL_VARIABLE="public_variable_from_env_local"
+PORT=3000
