--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.3",
+    "uuid": "^9.0.0",
     "vazirmatn": "^33.0.3"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
-    "@types/mime": "^3.0.1"
+    "@types/mime": "^3.0.1",
+    "@types/uuid": "^9.0.2"
   }
 }
