update uploading method

--- a/.env.development
+++ b/.env.development
@@ -4,3 +4,4 @@
 DEVELOPMENT_ENV_VARIABLE="server_only_development_variable"
 NEXT_PUBLIC_DEVELOPMENT_ENV_VARIABLE="public_development_variable"
 PORT=3000
+STORE_PATH=upload
