--- a/.env.production
+++ b/.env.production
@@ -5,3 +5,4 @@ PRODUCTION_ENV_VARIABLE="server_only_production_variable"
 NEXT_PUBLIC_PRODUCTION_ENV_VARIABLE="public_production_variable"
 DB_LOCAL_URL=mongodb://mongo:27017/denizpaz
 PORT=3000
+STORE_PATH=upload
