--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ ENV_VARIABLE=production_server_only_variable
 NEXT_PUBLIC_ENV_VARIABLE=production_public_variable
 DB_LOCAL_URL=mongodb://mongo:27017/denizpaz
 PORT=3000
+STORE_PATH=upload
