--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ NEXT_PUBLIC_ENV_VARIABLE=production_public_variable
 NEXT_PUBLIC_DB_LOCAL_URL=mongodb://mongo:27017/denizpaz
 PORT=3000
 STORE_PATH=upload
+NEXT_PUBLIC_DB_LOCAL_URL=mongodb://mongo:27017/denizpaz
