--- a/.env
+++ b/.env
@@ -3,6 +3,6 @@
 
 ENV_VARIABLE=production_server_only_variable
 NEXT_PUBLIC_ENV_VARIABLE=production_public_variable
-NEXT_PUBLIC_DB_LOCAL_URL=mongodb://mongo:27017/denizpaz
+NEXT_PUBLIC_DB_LOCAL_URL=mongodb://localhost:27017/denizpaz
 PORT=3000
 STORE_PATH=upload
