Add data seeder script for importing and destroying data

--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "launch": "npm run build && npm run start",
     "server-build": "next build && tsc --project tsconfig.server.json",
     "server-start": "cross-env NODE_ENV=production node dist/server.js",
-    "launch-server": "npm run server-build && npm run server-start"
+    "launch-server": "npm run server-build && npm run server-start",
+    "data:import": "ts-node --project tsconfig.seeder.json seeder.ts",
+    "data:destroy": "ts-node --project tsconfig.seeder.json seeder.ts -d"
   },
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
@@ -42,14 +44,15 @@
     "autoprefixer": "10.4.14",
     "cross-env": "^7.0.3",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.4.4",
     "eslint": "8.42.0",
-    "eslint-config-next": "13.4.4",
+    "eslint-config-next": "^14.1.0",
     "mime": "^3.0.0",
     "mongoose": "^7.2.3",
-    "next": "13.4.4",
+    "next": "^14.1.0",
     "postcss": "8.4.24",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.3",
